# Selino

./: .gitignore  README.md  SECURITY.md
src/: CMakeLists.txt
src/core/: config.hpp  main.cpp
src/core/config/: config.cpp  config.hpp
src/core/protocols/: base.cpp  base.hpp
src/core/protocols/socks/: socks.cpp  socks.hpp  socks4.cpp  socks5.cpp
src/scripting/lua/: callbacks.cpp  general.cpp  load.cpp  lua.hpp
src/utils/: data.cpp  endianness.cpp  networking.cpp  utils.hpp
testing/: logging.lua  packet-capture.lua
