cmake_minimum_required(VERSION 3.7..3.27)
if (${CMAKE_VERSION} VERSION_LESS 3.12)
	cmake_policy(VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION})
endif()

project(selino)
set(CMAKE_CXX_STANDARD 20)
file(GLOB_RECURSE SRC_FILES ${PROJECT_SOURCE_DIR}/*.cpp)
add_executable(selino ${SRC_FILES})
target_link_libraries(selino ${LUA_LIBRARIES})
find_package(Lua51 REQUIRED)
find_package(Boost REQUIRED)
include_directories(/usr/local/include ${LUA_INCLUDE_DIR} ${BOOST_INCLUDE_DIR} ${SOL_PATH})
